--- a/Python_Practices.ipynb
+++ b/Python_Practices.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "92f51c4d",
    "metadata": {
     "scrolled": true
@@ -52,10 +52,21 @@
      "text": [
       "pooja\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print (\"pooja\")\n"
+    "print (\"pooja\")\n",
+    "1+2"
    ]
   },
   {
